<resources>
    <string name="app_name">UnlockFood</string>

    <string name="facebook_app_id">129359327594049</string>
    <string name="pincode_screen_banner">ca-app-pub-6880520122218285/4271047650</string>
    <string name="old_banner">ca-app-pub-5096028997370190/8401993661</string>


    <string name="ok">Ok</string>
    <string name="done">Done</string>
    <string name="Cancel">Cancel</string>

    <string name="hiw">How it works</string>
    <string name="hiw_desc"> • UnlockFood places a banner on your lock screen which generates advertising revenue every time you unlock your phone. That money is then used to feed hungry people all over the world.</string>

    <string name="htu">How to Use</string>
    <string name="htu_1">1. Download unlockfood app for free on google play</string>
    <string name="htu_2">2. Install the app</string>
    <string name="htu_3">3. Unlock your phone using app</string>
    <string name="htu_4">4. Tap the banner ads</string>
    <string name="htu_5">5. Check the dashboard by click the app icon</string>

    <string name="ki">Known Issues:</string>
    <string name="ki_desc"> • App is not meant to override the actual android pincode settings due to security purpose.</string>

    <!-- TERMS AND CONDITION -->
    <string name="tac">Terms and Conditions</string>
    <string name="introduction">Introduction</string>

    <string name="introduction_desc">Welcome to our application (the “App“). This App is published by or on behalf of Unlock Food by Magick Multimedia LLC (“Magick” or “We” or “Us“) a company registered in British West Indies and can be contacted at P.O. Box 294, The Valley, Anguilla, British West Indies.\n\nBy downloading or otherwise accessing the App you agree to be bound by the following terms and conditions (“Terms“) and our privacy policy and our cookies policy. If you have any queries about the App or these Terms, you can contact Us by any of the means set out in paragraph 10 of these Terms. If you do not agree with these Terms, you should stop using the App immediately.</string>
    <string name="device_admin">Activate Device Admin Page Content</string>
    <string name="device_admin_desc">- Activating this administrator will allow the app Unlockfood to perform the following operations:\n\n
    •Lock the screen - Control how and when the screen locks\n
    •Change the screen-unlock password</string>
    <string name="general_rules">General Rules Relating to Conduct</string>
    <string name="general_rules_desc"> The App is made available for your own, personal use. The App must not be used for any commercial purpose whatsoever or for any illegal or unauthorised purpose. When you use the App you must comply with all/ any applicable international laws, including the local laws in your country of residence (together referred to as “Applicable Laws”).\n\nYou agree that when using the App you will comply with all Applicable Laws and these Terms. In particular, but without limitation, you agree not to:</string>
    <string name="grd1">Use the App in any unlawful manner or in a manner which promotes or encourages illegal activity including (without limitation) copyright infringement; or </string>
    <string name="grd2">Attempt to gain unauthorised access to the App or any networks, servers or computer systems connected to the App; or</string>
    <string name="grd3">Modify, adapt, translate or reverse engineer any part of the App or re-format or frame any portion of the pages comprising the App, save to the extent expressly permitted by these Terms or by law.</string>
    <string name="general_rules_desc2">You agree to indemnify Magick and its group companies in full and on demand from and against any loss, damage, costs or expenses which they suffer or incur directly or indirectly as a result of your use of the App otherwise than in accordance with these Terms or Applicable Laws.</string>

    <string name="content">Content</string>
    <string name="content_desc">The copyright in all material contained on, in, or available through the App including all information, data, text, music, sound, photographs, graphics and video messages, the selection and arrangement thereof, and all source code, software compilations and other material (“Material“) is owned by or licensed to Magick or its group companies. All rights are reserved. You can view, print or download extracts of the Material for your own personal use but you cannot otherwise copy, edit, vary, reproduce, publish, display, distribute, store, transmit, commercially exploit, disseminate in any form whatsoever or use the Material without Magick\'s express permission.\n\nThe trademarks, service marks, and logos (“Trade Marks“) contained on or in the App are owned by Magick or its group companies or third party partners of Magick. You cannot use, copy, edit, vary, reproduce, publish, display, distribute, store, transmit, commercially exploit or disseminate the Trade Marks without the prior written consent of Magick or the relevant group company or the relevant third party partner of Magick.</string>

    <string name="link_third_party">Link to Third Parties</string>
    <string name="link_third_party_desc">The App may contain links to websites operated by third parties (“Third Party Websites“). Magick may monetise some of these links through the use of third party affiliate programmes. Notwithstanding such affiliate programmes, Magick does not have any influence or control over any such Third Party Websites and, unless otherwise stated, is not responsible for and does not endorse any Third Party Websites or their availability or contents.</string>

    <string name="privacy_policy">Magick Privacy Policy</string>
    <string name="privacy_policy_desc"> We take your privacy very seriously. Magick will only use your personal information in accordance with the terms of our privacy policy and cookies policy. By using the App you acknowledge and agree that you have read and accept the terms of our app privacy policy and app cookies policy and these Terms.</string>

    <string name="disclaimer">DISCLAIMER / LIABILITY: USE OF THE APP IS AT YOUR OWN RISK. THE APP IS PROVIDED ON AN “AS IS” BASIS. TO THE MAXIMUM EXTENT PERMITTED BY LAW: (A) MAGICK DISCLAIMS ALL LIABILITY WHATSOEVER, WHETHER ARISING IN CONTRACT, TORT (INCLUDING NEGLIGENCE) OR OTHERWISE IN RELATION TO THE APP; AND (B) ALL IMPLIED WARRANTIES, TERMS AND CONDITIONS RELATING TO THE APP (WHETHER IMPLIED BY STATUE, COMMON LAW OR OTHERWISE), INCLUDING (WITHOUT LIMITATION) ANY WARRANTY, TERM OR CONDITION AS TO ACCURACY, COMPLETENESS, SATISFACTORY QUALITY, PERFORMANCE, FITNESS FOR PURPOSE OR ANY SPECIAL PURPOSE, AVAILABILITY, NON INFRINGEMENT, INFORMATION ACCURACY, INTEROPERABILITY, QUIET ENJOYMENT AND TITLE ARE, AS BETWEEN MAGICK AND YOU, HEREBY EXCLUDED. IN PARTICULAR, BUT WITHOUT PREJUDICE TO THE FOREGOING, WE ACCEPT NO RESPONSIBILITY FOR ANY TECHNICAL FAILURE OF THE INTERNET AND/OR THE APP; OR ANY DAMAGE OR INJURY TO USERS OR THEIR EQUIPMENT AS A RESULT OF OR RELATING TO THEIR USE OF THE APP. YOUR STATUTORY RIGHTS ARE NOT AFFECTED.</string>
    <string name="disclaimer_desc">Magick will not be liable, in contract, tort (including, without limitation, negligence), under statute or otherwise, as a result of or in connection with the App, for any: (i) economic loss (including, without limitation, loss of revenues, profits, contracts, business or anticipated savings); or (ii) loss of goodwill or reputation; or (iii) special or indirect or consequential loss.\n\nNothing in these Terms shall be construed as excluding or limiting the liability of Magick or its group companies for death or personal injury caused by its negligence or for any other liability which cannot be excluded by English law.</string>

    <string name="service_suspension">Service Suspension</string>
    <string name="service_suspension_desc">Magick reserves the right to suspend or cease providing any services relating to the apps published by it, with or without notice, and shall have no liability or responsibility to you in any manner whatsoever if it chooses to do so. </string>

    <string name="advertisers">Advertisers in the App</string>
    <string name="advertisers_desc"> We accept no responsibility for adverts contained within the App. If you agree to purchase goods and/or services from any third party who advertises in the App, you do so at your own risk. The advertiser, not Magick, is responsible for such goods and/or services and if you have any queries or complaints in relation to them, your only recourse is against the advertiser. </string>
    <string name="general">General</string>
    <string name="general_desc">These Terms (as amended from time to time) constitute the entire agreement between you and Magick concerning your use of the App.\n\nagick reserves the right to update these Terms from time to time. If it does so, the updated version will be effective immediately, and the current Terms are available through a link in the App to this page. You are responsible for regularly reviewing these Terms so that you are aware of any changes to them and you will be bound by the new policy upon your continued use of the App. No other variation to these Terms shall be effective unless in writing and signed by an authorised representative on behalf of Magick.\n\nif anyThese Terms shall be governed by and construed in accordance with English law and you agree to submit to the exclusive jurisdiction of the English Courts.\n\nIf any provision(s) of these Terms is held by a court of competent jurisdiction to be invalid or unenforceable, then such provision(s) shall be construed, as nearly as possible, to reflect the intentions of the parties (as reflected in the provision(s)) and all other provisions shall remain in full force and effect.\n\nMagick\'s failure to exercise or enforce any right or provision of these Terms shall not constitute a waiver of such right or provision unless acknowledged and agreed to by Magick in writing.\n\nUnless otherwise expressly stated, nothing in the Terms shall create any rights or any other benefits whether pursuant to the Contracts (Rights of Third Parties) Act 1999 or otherwise in favour of any person other than you, Magick and its group of companies. </string>

    <string name="contact_us">Contact US</string>
    <string name="contact_us_desc">You can contact the Magick Multimedia team at P.O. Box 294, The Valley, Anguilla, British West Indies. email: support@unlockfood.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
