<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.unlockfood.unlockfood.activity.HelpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="16dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Theme.AppCompat.NoActionBar"
        app:theme="@style/Theme.AppCompat.NoActionBar">

    </android.support.v7.widget.Toolbar>


    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="How it works"
        android:textStyle="bold" />

    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/hiw_desc" />


    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/htu"
        android:textStyle="bold" />

    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/htu_1" />

    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/htu_2" />

    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/htu_3" />

    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/htu_4" />

    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/htu_5" />

    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ki"
        android:textStyle="bold" />

    <com.unlockfood.unlockfood.widgets.TextViewMyriad
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/ki_desc" />


</LinearLayout>
